# price-monitoring

./: .env  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
templates/: 404.html  500.html  base.html  error.html  index.html  products.html  search.html
